small_fixes